# eccv2014_changkyu

./: README.md
dataset/train/3dobjects/expo_dry_erase_board_eraser/: 01.off  01_back.off  01_bottom.off  01_front.off  01_left.off  01_right.off  01_top.off
software/mvt/: CMakeLists.txt  build.sh
software/mvt/cmake/: CMakeLists.txt  FindMEXOPENCV.cmake
software/mvt/cmake_scripts/: FindMATLAB.cmake  FindMEXOPENCV.cmake  FindMEXOPENCV.cmake~  cmake_install.cmake
software/mvt/include/: detector_alm.h  detector_dpm.h  haarftr.h  motion_pairwise.h  motion_prior.h  mvt.h  mvt_2d_object.h  mvt_3d_object.h  mvt_model.h  mvt_param.h  mvt_param.h~  mvt_sampling.h  mvt_state.h  mvt_timer.h  mvt_tracker.h  mvt_types.h  mvt_types.h~  online_model_mil.h  utils.h  utils_cuda.h
software/mvt/src/: detector_alm.cpp  detector_dpm.cpp  detector_dpm.cpp~  haarftr.cu  main.cpp  motion_pairwise.cpp  motion_prior.cpp  mvt_2d_object.cpp  mvt_3d_object.cpp  mvt_model.cpp  mvt_param.cpp  mvt_param.cpp~  mvt_sampling.cpp  mvt_sampling.cpp~  mvt_state.cpp  mvt_timer.cpp  mvt_tracker.cpp  online_model_mil.cpp  utils.cu  utils_cuda.cpp
